--- a/web/home.html
+++ b/web/home.html
@@ -15,6 +15,10 @@
     <form method="get" action="start">
         <button type="submit" class="button">Start</button>
     </form>
+
+    <form method="get" action="stop">
+        <button type="submit" class="button">Stop</button>
+    </form>
 </body>
 
 </html>
